infra/k8s/frontend-depl.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend
                  image: kevingenus/frontend
---
apiVersion: v1
kind: Service
metadata:
    name: frontend-srv
spec:
    selector:
        app: frontend
    ports:
        - name: frontend
          protocol: TCP
          port: 3000
          targetPort: 3000
